--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "kirkbushell/eloquence",
-    "description": "A set of extensions adding additional functionality and consistency to Laravel's awesome Eloquent library.",
+    "name": "vuthaihoc/eloquence",
+    "description": "A set of extensions adding additional functionality and consistency to Laravel's awesome Eloquent library.[Change for my pfoject only]",
     "keywords": ["laravel", "eloquent", "camelcase", "camel", "case", "snake_case", "snake"],
     "authors": [
         {
@@ -10,7 +10,7 @@
     ],
     "require": {
         "php": ">=5.6.0",
-        "hashids/hashids": "1.0.5",
+        "hashids/hashids": "1.0.6",
         "illuminate/database": "~5.1",
 	    "ramsey/uuid": "^3.3",
         "hanneskod/classtools": "~1.0"
